[tool.poetry]
name = "smartfan"
version = "2.0.1"
description = "CLI for working with smart fans"
readme = "README.md"
authors = ["Ivan Cenov <i_cenov@botevgrad.com>"]
packages = [{include = "smartfan", from = "src"}]
include = [
    "pyproject.toml",
    "build.py",
    "README.md"
]

# Runtime dependencies
[tool.poetry.dependencies]
python = ">=3.12"
cython = ">=3.0"
setuptools = ">=68.0.0"
tomli = { version = "*", markers = "python_version < '3.11'" }
numpy = "2.2.0"
importlib = "*"
paho-mqtt = "*"
jsonschema = "*"
types-jsonschema = "*"
rfc3986 = "*"
typer = "*"
mqttms = {path = "../../100004/i100004"}

# Development dependencies
[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"  # Static type checker
pathlib = ">=1.0"
build = "^1.2.2.post1"

# Test dependencies
[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=6.0.0"
pytest-mock = ">=3.0.0"

# CLI entry points
[tool.poetry.scripts]
smartfan = "smartfan.cli.app:main"

# Definitions, specific for this project.
[tool.build.config]
extensions_path = "src/extensions"
include_dirs = ["src/include"]
libraries = []
build_log = true

[build-system]
requires = ["poetry-core", "setuptools", "Cython", "build"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = true
script = 'build.py'

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src"
